--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 
 <div class="wrapper">
 <!-- Main Message -->
-<header class="masthead" style="background-image:  url({{ url_for ('static', filename = 'img/bg1.png') }});">
+<header class="masthead" style="background-image:  url({{ url_for ('static', filename = 'bg1.png') }});">
     <div class="container">
         <div class="intro-text">
             <div class="intro-lead-in">{{ message }}</div>
