--- a/templates/singlemovie.html
+++ b/templates/singlemovie.html
@@ -8,7 +8,7 @@
                     </div>
                 </div>
                 <img class="img-fluid"
-                     src={{ url_for('static', filename='img/postures/'+movie[0]|string+'.jpg') }} alt="">
+                     src={{ url_for('static', filename=movie[0]|string+'.jpg') }} alt="">
             </a>
             <div class="portfolio-caption">
                 <p class="text-camelcase">{{ movie[1] }}</p>
