--- a/templates/watchmovie.html
+++ b/templates/watchmovie.html
@@ -49,7 +49,7 @@ body {
 <body>
 ​
 <video autoplay muted loop id="myVideo">
-  <source src={{ url_for('static', filename="img/rain.mp4") }} type="video/mp4">
+  <source src={{ url_for('static', filename="rain.mp4") }} type="video/mp4">
   Your browser does not support HTML5 video.
 </video>
 ​<form action="/home">
