--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
 {% include "header.html" %}
 
 <!-- Header -->
-<header class="masthead" style="background-image:  url({{ url_for ('static', filename = 'img/bg1.png') }});">
+<header class="masthead" style="background-image:  url({{ url_for ('static', filename = 'bg1.png') }});">
     <div class="container">
         <div class="center">
             <section>
